# Ultimate_Trader

./: .env.example  .gitignore  Portfolio_Status_2026-03-14_21-39.xlsx  README.md  autonomous_trader.py  main.py  pyproject.toml  test_trading_engine.py
