[project]
name = "ultimate-trader"
version = "0.1.0"
description = "Agno Agent System for Simulated Stock/ETF Trading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.0.0",
    "yfinance>=0.2.40",
    "schedule>=1.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ultimate-trader = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
